k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fantabro
  labels:
    app.kubernetes.io/part-of: fantabro
